# ChangeLog for sci-astronomy/skymaker
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> -Manifest,
  -files/skymaker-configure.patch, -skymaker-3.3.3.ebuild, skymaker-9999.ebuild:
  sci-astronomy/skymaker: EAPI-5, autotools-utils

*skymaker-9999 (04 Jul 2012)

  04 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> skymaker-3.3.3.ebuild,
  +skymaker-9999.ebuild, metadata.xml:
  Live version. Prefix love

  04 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Switched herd to sci-astronomy

  17 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org> skymaker-3.3.3.ebuild:
  License and web site changes

*skymaker-3.3.3 (27 Jul 2009)

  27 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -skymaker-3.1.0.ebuild, +skymaker-3.3.3.ebuild,
  +files/skymaker-configure.patch:
  Version bump

  20 Apr 2007; Sébastien Fabbro <bicatali@gentoo.org> ChangeLog:
  Initial import