@@ -1,0 +1,1 @@
+DIST skymaker-3.10.5.tar.gz 508938 SHA256 a16f9c2bd653763b5e1629e538d49f63882c46291b479b4a4997de84d8e9fb0f SHA512 98bb5a75c21475c6ecf16cb7de333db7faae95fd32c4ac311b44ddf637ffec2c80061b056b070b8d21b1a5a46c0a5a82855e417d25a9d8de02aad2167cb45b43 WHIRLPOOL 485cf8ad6b38b3ec3c5b9544b5c98ffcd24f485630c1228a8a95ef62b3c2b1618aea16cd6ee222cd89ae2080d313dc55eb88aebd2eaadc61b7e378d12bf66fe8
