@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*skymaker-3.10.5 (21 Mar 2014)
+
+  21 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> +skymaker-3.10.5.ebuild,
+  skymaker-9999.ebuild:
+  sci-astronomy/skymaker: Add new version linked to live one
+
   27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> -Manifest,
   -files/skymaker-configure.patch, -skymaker-3.3.3.ebuild, skymaker-9999.ebuild:
   sci-astronomy/skymaker: EAPI-5, autotools-utils
